--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,8 +18,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous">
 
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css" />
+    <!-- <link rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css" /> -->
     <link href="https://cdn.lineicons.com/5.0/lineicons.css" rel="stylesheet" />
 
     <link
