--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,18 +18,18 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous">
 
-    <!-- <link rel="stylesheet"
-     href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css" /> -->
+    <link rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css" />
     <link href="https://cdn.lineicons.com/5.0/lineicons.css" rel="stylesheet" />
 
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       rel="stylesheet" />
 
-    <link rel="stylesheet"
+    <!-- <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"
       integrity="sha512-4f6lf1Dhj7H7Fkb+ImoDLrKpefUqA5T9fjq5DK+oQOMJdC7xt5HXDMFbJ06VZb8sQObEvU7Zm8koPzI51+BF7A=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+      crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
     <title>Natroyal</title>
 
